# rtfm_schedule_pattern

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config
src/: main.rs
